--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -9,7 +9,7 @@ scrape_configs:
 
   - job_name: 'node'
     static_configs:
-      - targets: ['host.docker.internal:9100']
+      - targets: ['node-exporter:9100']
 
   - job_name: 'mysql'
     static_configs:
